<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nasdanika.core</groupId>
	<version>2023.4.1</version>
	<artifactId>parent</artifactId>
	<packaging>pom</packaging>
	<name>Nasdanika Core Parent</name>
	<description>Parent pom.</description>

	<url>https://docs.nasdanika.org/modules/core/index.html</url>
		
	<licenses>
		<license>
			<name>Eclipse Public License 2.0</name>
			<url>https://nasdanika.org/builds/master/eclipse-public-license-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/Nasdanika/core</url>
	</scm>

	<properties>
		<jacoco.version>0.8.10</jacoco.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
		<linksource>true</linksource>
	</properties>	

	<build>
	    <extensions>
	      <extension>
	        <groupId>org.apache.maven.wagon</groupId>
	         <artifactId>wagon-ssh</artifactId>
	         <version>3.5.3</version>
	      </extension>
	    </extensions>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>4.0.0-M5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		        <plugin>
		            <groupId>org.apache.maven.plugins</groupId>
		            <artifactId>maven-surefire-plugin</artifactId>
		            <version>3.1.2</version>
		            <dependencies>
		                <dependency>
		                    <groupId>org.junit.jupiter</groupId>
		                    <artifactId>junit-jupiter-engine</artifactId>
		                    <version>5.10.0-M1</version>
		                </dependency>
		            </dependencies>
		        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
			
				<executions>
					<execution>
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<additionalOptions>-Xdoclint:none</additionalOptions>
							<additionalOptions><![CDATA[--allow-script-in-comments]]></additionalOptions>
							<linksource>true</linksource>	
			        			<useStandardDocletOptions>true</useStandardDocletOptions>
							<links>
								<link>https://download.eclipse.org/modeling/emf/emf/javadoc/2.11/</link>
								<link>https://picocli.info/apidocs/</link>
							</links>
							<header>
								<![CDATA[
								      <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BRJVLK8CC"></script>
								      <script>
								        window.dataLayer = window.dataLayer || [];
								        function gtag(){dataLayer.push(arguments);}
								        gtag('js', new Date());
      
								        gtag('config', 'G-9BRJVLK8CC');
								      </script>    
								]]>
							</header>
						</configuration>
					</execution>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<additionalOptions>-Xdoclint:none</additionalOptions>
							<additionalOptions><![CDATA[--allow-script-in-comments]]></additionalOptions>
							<linksource>true</linksource>	
			        			<useStandardDocletOptions>true</useStandardDocletOptions>
							<links>
								<link>https://download.eclipse.org/modeling/emf/emf/javadoc/2.11/</link>
								<link>https://picocli.info/apidocs/</link>
							</links>
							<header>
								<![CDATA[
								      <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BRJVLK8CC"></script>
								      <script>
								        window.dataLayer = window.dataLayer || [];
								        function gtag(){dataLayer.push(arguments);}
								        gtag('js', new Date());
      
								        gtag('config', 'G-9BRJVLK8CC');
								      </script>    
								]]>
							</header>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>5.10.0-M1</version>
		    <scope>test</scope>
		</dependency>		
		
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.24.2</version>
			<scope>test</scope>
		</dependency>				
	</dependencies>

	<organization>
		<name>Nasdanika</name>
		<url>https://github.com/Nasdanika</url>
	</organization>

	<developers>
		<developer>
			<id>pvlasov</id>
			<name>Pavel Vlasov</name>
			<email>Pavel.Vlasov@nasdanika.org</email>
			<roles>
				<role>Lead Developer</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
	</developers>
	
	<modules>
		<module>drawio</module>
		<module>common</module>
		<module>persistence</module>
		<module>resources</module>
		<module>graph</module>
		<!-- <module>graph.processor.emf</module> -->
		<module>ncore</module>
		<module>ncore.gen</module>
		<module>exec</module>
		<module>exec.gen</module>
		<module>emf</module>
		<module>maven</module>
	</modules>	

	<distributionManagement>
		<site>
			<id>docs.nasdanika.org</id>
			<url>scp://docs.nasdanika.org/core/maven-site</url>
		</site>
	</distributionManagement>	

	 <profiles>
		<profile>
			<id>ossrh</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>	
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.13</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>								
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
				</repository>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>	
		</profile>
	</profiles>
</project>